--- a/deno.json
+++ b/deno.json
@@ -6,8 +6,7 @@
         "jsxImportSource": "uix",
         "lib": [
             "deno.window",
-            "dom",
-            "esnext"
+            "dom"
         ]
     }
 }
