--- a/deno.json
+++ b/deno.json
@@ -1,11 +1,19 @@
 {
-  "importMap": "./importmap.json",
-  "compilerOptions": {
-    "jsx": "react-jsx",
-    "jsxImportSource": "uix",
-    "lib": [
-      "deno.window",
-      "dom"
-    ]
-  }
+    "importMap": "./.datex-cache/importmap.lock.json",
+    "compilerOptions": {
+        "jsx": "react-jsx",
+        "jsxImportSource": "uix",
+        "lib": [
+            "deno.window",
+            "dom"
+        ]
+    },
+    "_publicImportMap": "./importmap.json",
+    "lint": {
+        "rules": {
+            "exclude": [
+                "jsx-key"
+            ]
+        }
+    }
 }
