--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,5 @@
 {
+    "_publicImportMap": "./importmap.dev.json",
     "importMap": "./.datex-cache/importmap.lock.json",
     "compilerOptions": {
         "jsx": "react-jsx",
@@ -8,7 +9,6 @@
             "dom"
         ]
     },
-    "_publicImportMap": "./importmap.json",
     "lint": {
         "rules": {
             "exclude": [
